--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "xcode-dark-theme",
     "description": "XCode Dark Theme for Brackets",
     "version": "0.0.1",
-    "author": "Danilson Veloso <danilsonvs04@gmail.com>",
+    "author": "Danilson Sousa <danilsonvs04@gmail.com>",
     "homepage": "https://github.com/danilsonsousa/xcode-dark-theme",
     "engines": {
         "brackets": ">=0.42.0"
